data/all_generated_tests/raw_wast_tests/unreachable_StackCorruption_1035.wast
;; 6. Test Description: Include a `call` to another function that contains `unreachable` and verify if returning from the function correctly handles the stack without any corruptions.

(assert_invalid
  (module
    (func $callee
      (unreachable)
    )
    (func $caller (result i32)
      (call $callee)
      (i32.const 1)
    )
  )
  "type mismatch"
)